# Hagar-Is-Cooking

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
app/: __main__.py
app/bot/: application.py  error_handler.py
app/config/: settings.py
app/database/: engine.py  models.py  recipe_history_repository.py  session_repository.py  user_repository.py
app/handlers/: checklist_handler.py  delivery_handler.py  interactive_handler.py  registry.py  search_handler.py  selection_handler.py  start_handler.py  substitution_handler.py
app/models/: recipe.py  search.py  session.py  substitution.py
app/prompts/: decide_substitutions.py  explain_step.py  normalize_query.py  rewrite_final_recipe.py  structure_recipe.py
app/services/: explanation_service.py  final_recipe_service.py  recipe_extraction_service.py  recipe_history_service.py  recipe_search_service.py  recipe_structuring_service.py  session_service.py  substitution_service.py
app/static/: emojis.py  labels.py
app/utils/: logging.py  retry.py  telegram_helpers.py  text.py
tests/: conftest.py  test_main.py
tests/bot/: test_application.py  test_error_handler.py
tests/config/: test_settings.py
tests/database/: test_engine.py  test_recipe_history_repository.py  test_session_repository.py  test_user_repository.py
tests/handlers/: test_checklist_handler.py  test_delivery_handler.py  test_interactive_handler.py  test_registry.py  test_search_handler.py  test_selection_handler.py  test_start_handler.py  (+1 more)
tests/utils/: test_text.py  (+3 more)
(+23 files in other folders)
